--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,9 +12,13 @@
             <a class="nav-link" href="/campgrounds/new">New campground</a>
           </div>
           <div class="navbar-nav" style="margin-left: auto;">
+            <% if(!currentUser) {%> 
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/register">Register</a>
+            <% } else { %> 
             <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" >Hello <%= currentUser.username %> </a>
+            <% } %> 
           </div>
         </div>
       </div>
