--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="post" novalidate class="validated-form">
+            <form action="/campgrounds" method="post" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="name">Title</label>
                     <input class="form-control" type="text" name="campground[title]" id="name" required>
@@ -19,7 +19,7 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" name="campground[image]" id="image" required>
+                    <input class="form-control" type="file" name="image" id="image" multiple required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
