--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -19,7 +19,8 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="file" name="image" id="image" multiple required>
+                    <!-- <input class="form-control" type="file" name="image" id="image" multiple required> -->
+                    <input type="file" name="image" id="" multiple>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
