--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,9 @@
     <div class="row">
         <div class="col-6">
             <div class="card mb-3">
-                <img src="<%= campground.image%>" class="card-img-top" alt="...">
+                <% for (let i = 0; i< campground.images.length; i ++) {%> 
+                <img src="<%= campground.images[i].url%>" class="card-img-top" alt="...">
+                <% } %> 
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title%>
