--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate') %>
     <div class="row">
         <h1 class="text-center">New Campground</h1>
-        <div class="col-6 offset-3">
+        <div class="col-6 offset-3 mb-3">
             <form action="/campgrounds" method="post" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="name">Title</label>
@@ -13,14 +13,6 @@
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
                     <input class="form-control" type="text" name="campground[location]" id="location" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image Url</label>
-                    <!-- <input class="form-control" type="file" name="image" id="image" multiple required> -->
-                    <input type="file" name="image" id="" multiple>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -44,6 +36,10 @@
                 </div>
                 <div class="valid-feedback">
                     Looks good!
+                </div>
+                <div class="mb-5 custom-file">
+                    <label for="formFile" class="form-label custom-file-label">Upload images</label>
+                    <input class="form-control" type="file" id="formFile" name="image" multiple>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add campground</button>
