add custom file input to update form:

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -19,10 +19,6 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Add image</label>
-                    <input type="file" name="image" id="" multiple>
-                </div>
-                <div class="mb-3">
                     <label class="form-label" for="price">Campground price</label>
                     <div class="input-group">
                         <span class="input-group-text" id="price-label">$</span>
@@ -39,6 +35,10 @@
                     <div class="valid-feedback">
                         Looks good!
                     </div>
+                </div>
+                <div class="mb-5 custom-file">
+                    <label for="formFile" class="form-label custom-file-label">Upload images</label>
+                    <input class="form-control" type="file" id="formFile" name="image" multiple>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-info">Update campground</button>
