--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,8 @@
 
     <div class="row">
         <div class="col-6">
-    
+
+            <div id='map' style='width: 400px; height: 300px;'></div>
 
             <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -111,3 +112,7 @@
                         <% } %>
         </div>
     </div>
+<script>
+    const mapboxToken = '<%- process.env.MAPBOX_TOKEN %>'
+</script>
+<script src="/scripts/showMap.js"></script>
