--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -9,7 +9,11 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
+                    <% if(campground.images[0]){ %> 
                     <img src="<%= campground.images[0].url %> " class="img-fluid" alt="">
+                    <% }else{ %> 
+                    <img src="https://res.cloudinary.com/dwju5f11m/image/upload/v1622522774/ggwd7hj4ei4q85mpnycv.jpg" class="img-fluid" alt="">
+                    <% } %> 
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
