--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -114,5 +114,7 @@
     </div>
 <script>
     const mapboxToken = '<%- process.env.MAPBOX_TOKEN %>'
+    const campground = <%- JSON.stringify(campground)%>
+
 </script>
 <script src="/scripts/showMap.js"></script>
