--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,9 +3,6 @@
 
     <div class="row">
         <div class="col-6">
-
-            <div id='map' style='width: 400px; height: 300px;'></div>
-
             <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i) => {  %> 
@@ -61,6 +58,7 @@
 
         </div>
         <div class="col-6">
+            <div class="mb-5" id='map' style='width: auto; height: 300px;'></div>
             <% if(currentUser){ %>
                 <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form"
                     novalidate>
