--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,13 +2,9 @@
 <% layout('/layouts/boilerplate') %> 
 <div style="width: 100%; height: 500px;" id="map"></div>
 
-<h1>ALL CAMPGROUNDS</h1>
-<div class="">
-    <a href="/campgrounds/new">Add campground</a>
-</div>
 
     <% for (let campground of campgrounds) {%> 
-        <div class="card mb-3">
+        <div class="card mb-3 mt-3">
             <div class="row">
                 <div class="col-md-4">
                     <% if(campground.images[0]){ %> 
