--- a/public/stylesheets/stars.css
+++ b/public/stylesheets/stars.css
@@ -189,3 +189,13 @@
 		display: none;
 	}
 }
+
+/* below is for bootstrap carousel */
+.carousel-item {
+	height: 400px;
+}
+.carousel-item img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
