--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,63 +1,63 @@
 <% layout('/layouts/boilerplate') %> 
 
-    <div class="row mb-3">
-        <h1 class="text-center">Edit Campground</h1>    
-        <div class="col-6 offset-3">
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post" novalidate class="validated-form" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label class="form-label" for="name">Title</label>
-                    <input class="form-control" type="text" name="campground[title]" id="name" value="<%= campground.title %>" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" name="campground[location]" id="location" value="<%= campground.location %>" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="price">Campground price</label>
-                    <div class="input-group">
-                        <span class="input-group-text" id="price-label">$</span>
-                        <input type="text" name="campground[price]" class="form-control" aria-describedby="price-label" aria-label="price" value="<%= campground.price %>" required>
+    <main class="container mt-5">
+        <div class="row mb-3">
+            <h1 class="text-center">Edit Campground</h1>
+            <div class="col-6 offset-3">
+                <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post" novalidate class="validated-form" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label class="form-label" for="name">Title</label>
+                        <input class="form-control" type="text" name="campground[title]" id="name" value="<%= campground.title %>" required>
                         <div class="valid-feedback">
                             Looks good!
                         </div>
                     </div>
-                </div>
-                
-                <div class="mb-3">
-                    <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" name="campground[description]" id="description" required><%= campground.description %> </textarea>
-                    <div class="valid-feedback">
-                        Looks good!
+                    <div class="mb-3">
+                        <label class="form-label" for="location">Location</label>
+                        <input class="form-control" type="text" name="campground[location]" id="location" value="<%= campground.location %>" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
                     </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="price">Campground price</label>
+                        <div class="input-group">
+                            <span class="input-group-text" id="price-label">$</span>
+                            <input type="text" name="campground[price]" class="form-control" aria-describedby="price-label" aria-label="price" value="<%= campground.price %>" required>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="mb-3">
+                        <label class="form-label" for="description">Description</label>
+                        <textarea class="form-control" type="text" name="campground[description]" id="description" required><%= campground.description %> </textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="mb-5 custom-file">
+                        <label for="formFile" class="form-label custom-file-label">Upload images</label>
+                        <input class="form-control" type="file" id="formFile" name="image" multiple>
+                    </div>
+                    <div class="mb-3">
+                        <% campground.images.forEach((img, i)=>{ %>
+                            <img class="img-thumbnail" src="<%= img.thumbnail %>" alt="">
+                            <div class="form-check-inline"><input type="checkbox" name="deleteImages[]" id="image-<%=i%>" value="<%=img.filename%>"></div>
+                            <label for="image-<%=i%>">Delete</label>
+                        <% }) %>
+                    </div>
+                    <div class="mb-3">
+                        <button class="btn btn-info">Update campground</button>
+                    </div>
+                </form>
+                <div>
+                    <a href="/campgrounds/<%= campground._id %> ">Back to campground</a>
                 </div>
-                <div class="mb-5 custom-file">
-                    <label for="formFile" class="form-label custom-file-label">Upload images</label>
-                    <input class="form-control" type="file" id="formFile" name="image" multiple>
-                </div>
-
-                <div class="mb-3">
-                    <% campground.images.forEach((img, i)=>{ %> 
-                        <img class="img-thumbnail" src="<%= img.thumbnail %>" alt="">
-                        <div class="form-check-inline"><input type="checkbox" name="deleteImages[]" id="image-<%=i%>" value="<%=img.filename%>"></div>
-                        <label for="image-<%=i%>">Delete</label>
-                    <% }) %> 
-                </div>
-
-                <div class="mb-3">
-                    <button class="btn btn-info">Update campground</button>
-                </div>
-            </form>
-            <div>
-                <a href="/campgrounds/<%= campground._id %> ">Back to campground</a>
+        
             </div>
-               
         </div>
-    </div>
-    
+        
+    </main>
    
