--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,31 +3,31 @@
 <div style="width: 100%; height: 500px;" id="map"></div>
 
 
-    <% for (let campground of campgrounds) {%> 
-        <div class="card mb-3 mt-3">
-            <div class="row">
-                <div class="col-md-4">
-                    <% if(campground.images[0]){ %> 
-                    <img src="<%= campground.images[0].url %> " class="img-fluid" alt="">
-                    <% }else{ %> 
-                    <img src="https://res.cloudinary.com/dwju5f11m/image/upload/v1622522774/ggwd7hj4ei4q85mpnycv.jpg" class="img-fluid" alt="">
-                    <% } %> 
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title"><%= campground.title %> </h5>
-
-                        <p class="card-text"><%= campground.description.substring(0, 50) %>... </p>
-                        <p class="card-text">
-                            <small class="text-muted"><%= campground.location %> </small>
-                        </p>
-                        <a href="/campgrounds/<%= campground._id %> " class="btn btn-primary">View <%= campground.title %> </a>
-
+    <main class="container">
+        <% for (let campground of campgrounds) {%>
+            <div class="card mb-3 mt-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <% if(campground.images[0]){ %>
+                        <img src="<%= campground.images[0].url %> " class="img-fluid" alt="">
+                        <% }else{ %>
+                        <img src="https://res.cloudinary.com/dwju5f11m/image/upload/v1622522774/ggwd7hj4ei4q85mpnycv.jpg" class="img-fluid" alt="">
+                        <% } %>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= campground.title %> </h5>
+                            <p class="card-text"><%= campground.description.substring(0, 50) %>... </p>
+                            <p class="card-text">
+                                <small class="text-muted"><%= campground.location %> </small>
+                            </p>
+                            <a href="/campgrounds/<%= campground._id %> " class="btn btn-primary">View <%= campground.title %> </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <% } %> 
+            <% } %>
+    </div>
 <script>
         const mapboxToken = '<%- process.env.MAPBOX_TOKEN %>'
         const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
