--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,54 +1,54 @@
 <% layout('/layouts/boilerplate') %>
-    <div class="row">
-        <h1 class="text-center">New Campground</h1>
-        <div class="col-6 offset-3 mb-3">
-            <form action="/campgrounds" method="post" novalidate class="validated-form" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label class="form-label" for="name">Title</label>
-                    <input class="form-control" type="text" name="campground[title]" id="name" required>
+    <div class="container mt-5">
+        <div class="row">
+            <h1 class="text-center">New Campground</h1>
+            <div class="col-6 offset-3 mb-3">
+                <form action="/campgrounds" method="post" novalidate class="validated-form" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label class="form-label" for="name">Title</label>
+                        <input class="form-control" type="text" name="campground[title]" id="name" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="location">Location</label>
+                        <input class="form-control" type="text" name="campground[location]" id="location" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="price">Campground price</label>
+                        <div class="input-group">
+                            <span class="input-group-text" id="price-label">$</span>
+                            <input type="text" name="campground[price]" class="form-control" aria-describedby="price-label"
+                                aria-label="price" required>
+                        </div>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="description">Description</label>
+                        <textarea class="form-control" type="text" name="campground[description]"
+                            id="description"></textarea>
+                    </div>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" name="campground[location]" id="location" required>
-                    <div class="valid-feedback">
-                        Looks good!
+                    <div class="mb-5 custom-file">
+                        <label for="formFile" class="form-label custom-file-label">Upload images</label>
+                        <input class="form-control" type="file" id="formFile" name="image" multiple>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="price">Campground price</label>
-                    <div class="input-group">
-                        <span class="input-group-text" id="price-label">$</span>
-                        <input type="text" name="campground[price]" class="form-control" aria-describedby="price-label"
-                            aria-label="price" required>
+                    <div class="mb-3">
+                        <button class="btn btn-success">Add campground</button>
                     </div>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+                </form>
+                <div>
+                    <a href="/campgrounds">View All campgrounds</a>
                 </div>
-
-                <div class="mb-3">
-                    <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" name="campground[description]"
-                        id="description"></textarea>
-                </div>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-                <div class="mb-5 custom-file">
-                    <label for="formFile" class="form-label custom-file-label">Upload images</label>
-                    <input class="form-control" type="file" id="formFile" name="image" multiple>
-                </div>
-                <div class="mb-3">
-                    <button class="btn btn-success">Add campground</button>
-                </div>
-            </form>
-            <div>
-                <a href="/campgrounds">View All campgrounds</a>
             </div>
-
         </div>
     </div>
 
