--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,119 +1,117 @@
 <% layout('/layouts/boilerplate') %>
 <link rel="stylesheet" href="/stylesheets/stars.css">
 
-    <div class="row">
-        <div class="col-6">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                <% campground.images.forEach((img, i) => {  %> 
-                  <div class="carousel-item<%= i === 0? ' active' : '' %> ">
-                    <img src="<%= img.url %> " class="d-block w-100" alt="first image">
-                  </div>
-                <% }) %> 
-                </div>
-                <% if (campground.images.length > 1) { %> 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-                <% } %> 
-            </div>
-
-            <div class="card mb-3">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <%= campground.title%>
-                    </h5>
-                    <p class="card-text">
-                        <%= campground.description%>
-                    </p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item text-muted">
-                        <%= campground.location%>
-                    </li>
-                    <li class="list-group-item text-muted">Posted by <span class="text-dark">
-                            <%= campground.author.username%>
-                        </span></li>
-                    <li class="list-group-item">$<%= campground.price%>/night</li>
-                </ul>
-                <% if(currentUser && campground.author.equals(currentUser)) { %>
-                    <div class="card-body">
-                        <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
-                        <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-                            <button class="btn btn-danger">Delete</button>
-                        </form>
+    <main class="container mt-5">
+        <div class="row">
+            <div class="col-6">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                    <% campground.images.forEach((img, i) => {  %>
+                      <div class="carousel-item<%= i === 0? ' active' : '' %> ">
+                        <img src="<%= img.url %> " class="d-block w-100" alt="first image">
+                      </div>
+                    <% }) %>
                     </div>
+                    <% if (campground.images.length > 1) { %>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
                     <% } %>
-                        <div class="card-footer text-muted">
-                            2 days ago
-                        </div>
-            </div>
-
-        </div>
-        <div class="col-6">
-            <div class="mb-5" id='map' style='width: auto; height: 300px;'></div>
-            <% if(currentUser){ %>
-                <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form"
-                    novalidate>
-                         
-                        <h2>Leave a Review: </h2>
-                        <fieldset class="starability-basic">
-                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
-                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                            <label for="first-rate1" title="Terrible">1 star</label>
-                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                            <label for="first-rate2" title="Not good">2 stars</label>
-                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                            <label for="first-rate3" title="Average">3 stars</label>
-                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                            <label for="first-rate4" title="Very good">4 stars</label>
-                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                            <label for="first-rate5" title="Amazing">5 stars</label>
-                          </fieldset>
-
-                    <div class="mb-3">
-                        <label class="form-label" for="body">Comment</label>
-                        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"
-                            required></textarea>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title%>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description%>
+                        </p>
                     </div>
-                    <button class="btn btn-success mb-2">Submit</button>
-                </form>
-                <% } %>
-                    <% for(let review of campground.reviews) { %>
-                        <div class="card mb-3 ">
-                            <div class="card-body">                                
-                                <h6 class="card-subtitle mb-2">By <%= review.author.username%></h6>
-                                <small class="text-muted">
-                                    <% const year =  review._id.getTimestamp().getFullYear() || "2021"%> 
-                                    <% const month =  review._id.getTimestamp().getMonth() + 1 || "12"%> 
-                                    <% const date =  review._id.getTimestamp().getDate() || "24"%> 
-                                    <%- year+ "-" + month + "-" + date %>  
-                                </small>                                
-                                <p class="starability-result" data-rating="<%= review.rating %>">
-                                    Rated: <%= review.rating %> stars
-                                  </p>
-
-                                <p class="card-text">Review: <%= review.body %></p>
-                                <% if (currentUser && review.author.equals(currentUser._id)){ %>
-                                    <form
-                                        action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
-                                        method="POST">
-                                        <button class="btn btn-sm btn-danger">Delete</button>
-                                    </form>
-                                    <% } %>
-                            </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-muted">
+                            <%= campground.location%>
+                        </li>
+                        <li class="list-group-item text-muted">Posted by <span class="text-dark">
+                                <%= campground.author.username%>
+                            </span></li>
+                        <li class="list-group-item">$<%= campground.price%>/night</li>
+                    </ul>
+                    <% if(currentUser && campground.author.equals(currentUser)) { %>
+                        <div class="card-body">
+                            <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+                            <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                                <button class="btn btn-danger">Delete</button>
+                            </form>
                         </div>
                         <% } %>
+                            <div class="card-footer text-muted">
+                                2 days ago
+                            </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="mb-5" id='map' style='width: auto; height: 300px;'></div>
+                <% if(currentUser){ %>
+                    <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form"
+                        novalidate>
+        
+                            <h2>Leave a Review: </h2>
+                            <fieldset class="starability-basic">
+                                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+                                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                                <label for="first-rate1" title="Terrible">1 star</label>
+                                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                                <label for="first-rate2" title="Not good">2 stars</label>
+                                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                                <label for="first-rate3" title="Average">3 stars</label>
+                                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                                <label for="first-rate4" title="Very good">4 stars</label>
+                                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                                <label for="first-rate5" title="Amazing">5 stars</label>
+                              </fieldset>
+                        <div class="mb-3">
+                            <label class="form-label" for="body">Comment</label>
+                            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"
+                                required></textarea>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                        </div>
+                        <button class="btn btn-success mb-2">Submit</button>
+                    </form>
+                    <% } %>
+                        <% for(let review of campground.reviews) { %>
+                            <div class="card mb-3 ">
+                                <div class="card-body">
+                                    <h6 class="card-subtitle mb-2">By <%= review.author.username%></h6>
+                                    <small class="text-muted">
+                                        <% const year =  review._id.getTimestamp().getFullYear() || "2021"%>
+                                        <% const month =  review._id.getTimestamp().getMonth() + 1 || "12"%>
+                                        <% const date =  review._id.getTimestamp().getDate() || "24"%>
+                                        <%- year+ "-" + month + "-" + date %>
+                                    </small>
+                                    <p class="starability-result" data-rating="<%= review.rating %>">
+                                        Rated: <%= review.rating %> stars
+                                      </p>
+                                    <p class="card-text">Review: <%= review.body %></p>
+                                    <% if (currentUser && review.author.equals(currentUser._id)){ %>
+                                        <form
+                                            action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
+                                            method="POST">
+                                            <button class="btn btn-sm btn-danger">Delete</button>
+                                        </form>
+                                        <% } %>
+                                </div>
+                            </div>
+                            <% } %>
+            </div>
         </div>
-    </div>
+    </main>
 <script>
     const mapboxToken = '<%- process.env.MAPBOX_TOKEN %>'
     const campground = <%- JSON.stringify(campground) %>
