--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,14 +1,16 @@
 <% layout('/layouts/boilerplate') %> 
 
-<div class="row">
-
-        <div class="alert alert-danger" role="alert">
-            <h4 class="alert-heading">Error: <%= err.message %> </h4>
-            <% if (process.env.NODE_ENV !== "production"){ %> 
-            <p style="width: fit-content;"><%= err.stack %> </p>
-            <% } %> 
-            <hr>
-            <p class="mb-0">Whenever you need to, be sure to carpe diem</p>
-        </div>
-
-</div>
+<main class="container mt-5">
+    <div class="row">
+    
+            <div class="alert alert-danger" role="alert">
+                <h4 class="alert-heading">Error: <%= err.message %> </h4>
+                <% if (process.env.NODE_ENV !== "production"){ %>
+                <p style="width: fit-content;"><%= err.stack %> </p>
+                <% } %>
+                <hr>
+                <p class="mb-0">Whenever you need to, be sure to carpe diem</p>
+            </div>
+    
+    </div>
+</main>
